--- a/src/components/hero-section.scss
+++ b/src/components/hero-section.scss
@@ -47,7 +47,7 @@
     div.ctas {
       margin-bottom: 90px;
 
-      button {
+      a {
         margin: 0 1em;
       }
     }
@@ -148,7 +148,7 @@
       div.ctas {
         margin-bottom: 25px;
 
-        button {
+        a {
           width: 100%;
           margin: 0;
 
