Styled video player.

--- a/src/components/features-section.scss
+++ b/src/components/features-section.scss
@@ -64,9 +64,8 @@ body.sticky {
 
 #video {
   width: 100%;
-  background-color: $white-bg-color;
-  // padding: 8em 0;
-  padding-bottom: 150px;
+  background-color: #f2f2f2;
+  padding: 150px 0;
 
   .headline {
     font-size: 3.5em;
