Changed copy. Unified section layout CSS.

--- a/src/components/chart.scss
+++ b/src/components/chart.scss
@@ -98,6 +98,7 @@ $white-icon-bg-color: #bfbfbf;
       width: 20px;
       height: 20px;
       stroke-width: 0;
+      text-align: center;
 
       span {
         position: absolute;
