--- a/src/components/personas-section.scss
+++ b/src/components/personas-section.scss
@@ -68,6 +68,7 @@
     .call-to-action {
       position: relative;
       margin-bottom: 2em;
+      text-align: center;
 
       button.cta {
         padding: 5px 20px;
