--- a/src/components/features-section.scss
+++ b/src/components/features-section.scss
@@ -4,88 +4,35 @@
  * Features
  */
 
-.intro-features {
-  #sticky-header {
-    position: relative;
-    width: 100%;
-    // transform: translateY(-100%);
-    // opacity: 0;
-    // transition: opacity 0.2s ease-out;
-    background: linear-gradient(to right, $light-purple, #5192ff);
+#intro #intro-video {
+  &, .concept.top, .concept.bottom {
+    background-color: #f2f2f2;
+  }
 
-    pointer-events: auto;
+  .top {
+    .content .block {
+      padding-bottom: 0;
 
-    .header {
-      padding:0.75em 0;
-      font-size: 2em;
-      color: white;
+      .headline.jumbo {
+        margin-bottom: 0;
+        font-size: 4.1em;
+      }
     }
   }
 
-  .content {
+  .bottom {
     .block {
-      .practice {
-        text-align: left;
-
-        h2 {
-          text-align: left;
-          font-size: 2.5em;
-          font-weight: bold!important;
-          color: $white-headline;
-          margin: 1.5em 0 0.5em;
-        }
-      }
+      padding-top: 0;
     }
   }
-}
-
-body.sticky {
-  #intro #sticky-header {
-    // transform: translateY(0%);
-    // opacity: 1;
-    position: fixed;
-    z-index:100;
-    top:0;
-    left:0;
-    pointer-events: none;
-    background-color: rgba(250,250,250, 0.95);
-    background: none;
-    border-bottom: 1px solid #eee;
-
-    .header {
-      color: #999;
-
-      span.highlight {
-        color: $purple;
-      }
-    }
-  }
-}
-
-#video {
-  width: 100%;
-  background-color: #f2f2f2;
-  padding: 150px 0;
 
   .headline {
-    font-size: 3.5em;
-    text-align: center;
     color: #999;
-    padding: 0.5em 1em 0.2em;
-    box-sizing: border-box;
   }
 
   .text {
-    text-align: justify;
-    max-width: 860px;
-    width: 100%;
-    margin: 0 auto;
     color: #666;
-    font-size: 1.9em;
-    font-weight: 100;
-    margin-bottom: 1em;
-    padding: 0 1em;
-    box-sizing: border-box;
+    text-align: center;
   }
 }
 
@@ -103,22 +50,9 @@ body.sticky {
  */
 
 @media only screen and (min-width: 0) and (max-width: 600px) {
-  .intro-features {
-    #sticky-header {
-      .header {
-        padding:0.75em 1em;
-        font-size: 1em;
-      }
-    }
-  }
-
-  #video {
-    .headline {
+  #intro #intro-video {
+    .top .content .block .headline.jumbo {
       font-size: 1.8em;
-    }
-
-    .text {
-      font-size: 1.6em;
     }
   }
 }
