--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -23,6 +23,11 @@
 
   .headline {
     font-family: "Questrial", Roboto, "Helvetica Neue", sans-serif;
+    text-align: center;
+  }
+
+  .text {
+    font-size: 1.3em;
   }
 
   /**
@@ -69,10 +74,6 @@
     margin-bottom: 1em;
   }
 
-  .intro-video {
-    margin-bottom: 3em;
-  }
-
   .content {
     max-width: 1000px;
     width: 100%;
@@ -81,7 +82,7 @@
     .block {
       max-width: $intro-block-width;
       width: 100%;
-      text-align: center;
+      text-align: left;
       margin: 0 auto;
       padding: 150px 2em;
       box-sizing: border-box;
@@ -174,7 +175,7 @@
         padding: 3.5em 1.5em;
 
         .jumbo {
-          font-size: 2em;
+          font-size: 2.3em;
           margin-bottom: 0.5em;
         }
       }
