--- a/src/components/app-section.scss
+++ b/src/components/app-section.scss
@@ -16,7 +16,6 @@
 
     .text {
       color: #666;
-      font-size: 2em;
       text-align: left;
 
       p {
@@ -25,6 +24,20 @@
         span.highlight {
           color: $purple;
         }
+      }
+    }
+  }
+}
+
+/**
+ * Large layout
+ */
+
+@media only screen and (min-width: 961) {
+  #intro-app {
+    .content {
+      .text {
+        font-size: 2.4em;
       }
     }
   }
@@ -47,9 +60,6 @@
   #intro-app {
     .content {
       .text {
-        font-size: 1.3em;
-        margin-right: 0;
-
         p {
           overflow-wrap: break-word;
           word-wrap: break-word;
