--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -26,7 +26,7 @@
   }
 
   .text {
-    font-size: 1.3em;
+    font-size: 1.8em;
   }
 
   /**
@@ -79,11 +79,11 @@
     position: relative;
 
     .block {
-      max-width: $intro-block-width;
       width: 100%;
       text-align: left;
       margin: 0 auto;
-      padding: 150px 2em;
+      padding-top: 150px;
+      padding-bottom: 150px;
       box-sizing: border-box;
       font-weight: 100;
     }
@@ -169,9 +169,14 @@
       box-sizing: border-box;
     }
 
+    .text {
+      font-size: 1.3em;
+    }
+
     .content {
       .block {
-        padding: 3.5em 1.5em;
+        padding-top: 3.5em;
+        padding-bottom: 3.5em;
 
         .jumbo {
           font-size: 2.3em;
