--- a/src/components/app-section.scss
+++ b/src/components/app-section.scss
@@ -33,7 +33,7 @@
  * Large layout
  */
 
-@media only screen and (min-width: 961) {
+@media only screen and (min-width: 961px) {
   #intro-app {
     .content {
       .text {
