--- a/src/components/practice-section.scss
+++ b/src/components/practice-section.scss
@@ -17,11 +17,10 @@
       font-size: 2.1em;
 
       ol {
-        border-radius: 5px;
-        color: white;
+        border-radius: 4px;
+        color: #AACCFF;
         font-weight: 400;
-        // background-color: $light-purple;
-        background: linear-gradient(to top, $light-purple, #5192ff);
+        background: rgba(34,34,51,0.75); // #222233
         padding: 2em 3.5em;
         box-shadow: 0 0 10px #000;
 
