--- a/src/components/practice-section.scss
+++ b/src/components/practice-section.scss
@@ -20,7 +20,7 @@
         border-radius: 4px;
         color: #18FFFF;
         font-weight: 400;
-        background: #222233;
+        background: rgba(34,34,51,0.75); // #222233
         padding: 2em 3.5em;
         box-shadow: 0 0 10px #000;
 
