--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -67,6 +67,24 @@
     }
   }
 
+  /**
+   * Background images
+   */
+
+  .bgImg.gatsby-image-outer-wrapper {
+    z-index: 0!important;
+    position: absolute!important;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    .gatsby-image-wrapper {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .jumbo {
     font-weight: bold;
     font-size: 4.4em;
