--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,21 +1,29 @@
+@import './../fonts/fonts.scss';
+
 $intro-block-width: 780px;
 
-$white-bg-color: rgb(250,250,250);
-$white-headline: #111;
-$white-text: #333;
+$white-text: white;
 $black-bg-color: rgb(26,26,26);
 
-// Deep Orange 900
-$dark-red: #BF360C;
-// Green A400
-$green: #00E676;
-
 // Flowra colors
+$white-bg: #fafafa;
+
+// NB purple shades, violet, green are based on #634fed
+// See http://htmlcolorcodes.com/color-picker/
+
+$light-purple: #715cff;
+$light-purple-shade: #7765EF;
 $purple: #634fed;
 $dark-purple: #4A3BB2;
-$light-purple: #715cff;
-$dark-green: #4CAF50;
+$dark-purple-shade: #6755DF;
+
+$light-violet: #DA4FED;
+$violet: #8A4FED;
+
 $light-green: #B2FF59;
-$red: #F44336;
+$green: #4FEDB2;
+$dark-green: #4CAF50;
+
 $yellow: #FFEB3B;
 $amber: #FFC107;
+$red: #F44336;
