--- a/src/components/app-section.scss
+++ b/src/components/app-section.scss
@@ -5,68 +5,17 @@
  */
 
 #intro-app {
+  background-color: $light-purple-shade;
+
   .content {
     .headline {
-      background: linear-gradient(to right, $light-purple, #5192ff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent!important;
       margin-bottom: 1em;
     }
 
     .text {
-      color: #666;
-
-      p {
-        margin-top: 0;
-
-        span.highlight {
-          color: $purple;
-        }
-      }
-    }
-  }
-}
-
-/**
- * Large layout
- */
-
-@media only screen and (min-width: 961px) {
-  #intro-app {
-    .content {
-      .text {
-        font-size: 2.4em;
-      }
-    }
-  }
-}
-
-/**
- * Medium layout
- */
-
-@media only screen and (min-width: 601px) and (max-width: 960px) {
-  #intro-app {
-  }
-}
-
-/**
- * Small layout
- */
-
-@media only screen and (min-width: 0) and (max-width: 600px) {
-  #intro-app {
-    .content {
-      .text {
-        p {
-          overflow-wrap: break-word;
-          word-wrap: break-word;
-          -webkit-hyphens: auto;
-          -ms-hyphens: auto;
-          -moz-hyphens: auto;
-          hyphens: auto;
-        }
+      span.highlight {
+        @include font-semi-bold();
+        color: $green;
       }
     }
   }
