--- a/src/components/personas-section.scss
+++ b/src/components/personas-section.scss
@@ -21,8 +21,6 @@
     .headline.jumbo {
       font-size: 6em;
       text-align: center;
-      margin-top: 1em;
-      margin-bottom:115px;
     }
 
     .persona {
@@ -30,40 +28,32 @@
       text-align: center;
     }
 
-    strong, span.sub {
-      font-weight:100;
+    div.sub {
+      font-size: 1.6em;
+      margin-bottom: 0.5em;
     }
 
-    span.sub {
-      font-size: 1.3em;
-      text-shadow: 0px 0px 5px #4b4b4b;
-    }
-
-    strong {
+    div.headline {
       display: block;
       font-size: 2.6em;
-      font-weight: 600;
       color: #fff;
     }
 
     div.first-time {
-      span {
+      div.sub {
         color: $green;
       }
     }
 
     div.experienced {
-      font-weight:100;
-
-      span {
-        // Light Blue A400
-        color: #00B0FF;
+      div.sub {
+        color: $light-violet;
       }
     }
 
     .call-to-action {
       position: relative;
-      margin-bottom: 2em;
+      margin-bottom: 3em;
       text-align: center;
 
       button.cta {
@@ -75,15 +65,6 @@
         }
       }
     }
-  }
-}
-
-/**
- * Small + Medium layout
- */
-
-@media only screen and (min-width: 0px) and (max-width: 960px) {
-  #intro-personas {
   }
 }
 
@@ -103,10 +84,13 @@
         margin: 1em;
       }
 
-      strong {
-        font-size: 2em;
+      div.sub {
+        font-size: 1.5em;
       }
 
+      div.headline {
+        font-size: 2.2em;
+      }
     }
   }
 }
