--- a/src/components/practice-section.scss
+++ b/src/components/practice-section.scss
@@ -5,54 +5,48 @@
  */
 
 #intro-practice {
-  position:relative;
-  background-color: $black-bg-color;
-  box-shadow: inset 0 0 10px #000000;
+  background-color: $dark-purple-shade;
 
   .content {
-    .practice-time {
-      font-size: 2.1em;
+    ol {
+      font-size: 2.6em;
+      margin: 0;
+      padding: 1.5em 1.5em 1.5em 3em;
 
-      ol {
-        border-radius: 4px;
-        font-weight: 400;
-        background: rgba(34,34,51,0.75); // #222233
-        padding: 2em 2em 2em 3.5em;
-        box-shadow: 0 0 10px #000;
+      li {
+        @include font-semi-bold();
+        font-size: 1.3em;
+        line-height: 1em;
+        text-align: left;
+        
+        &:first-of-type {
+          padding-bottom: 0.3em;
+        }
 
-        li {
-          font-size: 2em;
-          line-height: 1em;
-
-          &.find {
-            color: #1de9b6;
-            div {
-              background: linear-gradient(to right, #1de9b6, #5192ff);
-              -webkit-background-clip: text;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-
-          &.deep {
-            color: #E040FB;
-            div {
-              background: linear-gradient(to right, #E040FB, #5192ff);
-              -webkit-background-clip: text;
-              background-clip: text;
-              color: transparent;
-            }
-          }
-
+        &.find {
+          color: $violet;
           div {
-            margin-left: 0.3em;
-            font-size: .5em;
-            line-height: 1.3em;
+            color: $violet;
           }
+        }
 
-          &:first-of-type {
-            margin-bottom: .5em;
+        &.deep {
+          color: $light-violet;
+          div {
+            color: $light-violet;
           }
+        }
+
+        div {
+          display: inline-block;
+          vertical-align: text-top;
+          margin-left: 0.3em;
+          font-size: .5em;
+          line-height: 1.3em;
+        }
+
+        &:first-of-type {
+          margin-bottom: .5em;
         }
       }
     }
@@ -66,13 +60,11 @@
 @media only screen and (min-width: 0px) and (max-width: 960px) {
   #intro-practice {
     .content {
-      .practice-time {
-        p.highlight {
-          padding-left: 0.7em;
-          padding-right: 0.7em;
-          margin-left: -0.7em;
-          margin-right: -0.7em;
-        }
+      p.highlight {
+        padding-left: 0.7em;
+        padding-right: 0.7em;
+        margin-left: -0.7em;
+        margin-right: -0.7em;
       }
     }
   }
@@ -85,16 +77,19 @@
 @media only screen and (min-width: 0) and (max-width: 600px) {
   #intro-practice {
     .content {
-      .practice-time {
-        font-size: 1.3em;
+      .text {
+        margin-bottom: 1em;
+      }
 
-        ol {
-          padding: 1em 1em 1em 3em;
+      ol {
+        font-size: 2em;
+        padding: 1em 1em 1em 2.5em;
 
-          li {
-            &:first-of-type {
-              margin-bottom: 0.2em;
-            }
+        li {
+          font-size: 1.3em;
+
+          &:first-of-type {
+            padding-bottom: 0.2em;
           }
         }
       }
