--- a/src/components/problem-section.scss
+++ b/src/components/problem-section.scss
@@ -5,38 +5,5 @@
  */
 
 #intro-problem {
-  background: linear-gradient(to bottom, #222233, #1c1c2b);
-
-  .content {
-    .headline {
-      color: #ebf4ff;
-    }
-
-    .text {
-      color: #AACCFF;
-    }
-  }
-}
-
-/**
- * Small + Medium layout
- */
-
-@media only screen and (min-width: 0px) and (max-width: 960px) {
-  #intro-problem {
-  }
-}
-
-/**
- * Small layout
- */
-
-@media only screen and (min-width: 0) and (max-width: 600px) {
-  #intro-problem {
-    .content {
-      .text {
-        margin-top: 1em;
-      }
-    }
-  }
+  background-color: $light-purple-shade;
 }
