--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -21,7 +21,7 @@ $light-violet: #DA4FED;
 $violet: #8A4FED;
 
 $light-green: #B2FF59;
-$green: #4FEDB2;
+$green: #00ff93;
 $dark-green: #4CAF50;
 
 $yellow: #FFEB3B;
