--- a/src/fonts/fonts.scss
+++ b/src/fonts/fonts.scss
@@ -14,7 +14,7 @@
   font-style: normal;
 }
 
-@mixin font-semi-light() {
+@mixin font-light() {
   font-family: 'HurmeGeometricSans1-Light' , 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
