--- a/src/components/features-section.scss
+++ b/src/components/features-section.scss
@@ -7,6 +7,14 @@
 #intro #intro-video {
   background-color: $light-purple-shade;
 
+  div.block {
+    padding-top: 100px;
+  }
+
+  h2.headline.jumbo {
+    margin-bottom: 0.5em;
+  }
+
   div.text {
     text-align: center;
 
