--- a/src/pages/tos.scss
+++ b/src/pages/tos.scss
@@ -1,7 +1,8 @@
 .terms {
   font-size: 0.7em;
   max-width: 560px;
-  margin: 80px auto;
+  margin: 60px auto;
+  padding: 2em;
 
   p, li, a {
     font-weight: bolder;
